--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -17,8 +17,10 @@
    "source": [
     "## Todo:\n",
     "\n",
-    "- correct geometry factors $G_b$ and $H_b$\n",
-    "- Work on output of an array of ice positions that's timesliced according to global time\n",
+    "- **correct geometry factors $G_b$ and $H_b$ *(quick fix stemming from kink)***\n",
+    "- **Work on output of an array of ice positions that's timesliced according to global time**\n",
+    "- Add the autogeometry detecting thing in graphic utils\n",
+    "- Define function that defines volume!\n",
     "\n",
     "## Backburner-type-beat:\n",
     "- make sure everything is numbafied\n",
