Committed giga chad script that explores parameters

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -17,13 +17,12 @@
    "source": [
     "## Todo:\n",
     "\n",
-    "- **correct geometry factors $G_b$ and $H_b$ *(quick fix stemming from kink)***\n",
+    "- **UPDATE `snowflake_plot.py` to do the fancy stuff by itself**\n",
     "- **Work on output of an array of ice positions that's timesliced according to global time**\n",
     "- Add the autogeometry detecting thing in graphic utils\n",
     "- Define function that defines volume!\n",
     "\n",
     "## Backburner-type-beat:\n",
-    "- make sure everything is numbafied\n",
     "- Continue commenting in `ice_funcs.py`\n",
     "\n",
     "\n",
