--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -20,7 +20,7 @@
     "- **UPDATE `snowflake_plot.py` to do the fancy stuff by itself**\n",
     "- **Work on output of an array of ice positions that's timesliced according to global time**\n",
     "- Add the autogeometry detecting thing in graphic utils\n",
-    "- Define function that defines volume!\n",
+    "- Define function that calculates boundary cells vs ice cells (ran at end of simulation)!\n",
     "\n",
     "## Backburner-type-beat:\n",
     "- Continue commenting in `ice_funcs.py`\n",
